force-app/main/default/objects/Account/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting Authorisation</fullName>
            </value>
            <value>
                <fullName>Awaiting Citi</fullName>
            </value>
            <value>
                <fullName>Awaiting EFT deposit form</fullName>
            </value>
            <value>
                <fullName>Awaiting Legal</fullName>
            </value>
            <value>
                <fullName>Awaiting Terms and Conditions</fullName>
            </value>
            <value>
                <fullName>DD Complete</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Due Diligence In Progress</fullName>
            </value>
            <value>
                <fullName>New Due Diligence</fullName>
            </value>
            <value>
                <fullName>New registration</fullName>
            </value>
            <value>
                <fullName>Periodic review</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Registration Approved</fullName>
            </value>
            <value>
                <fullName>Registration Complete</fullName>
            </value>
            <value>
                <fullName>Registration Completed Input</fullName>
            </value>
            <value>
                <fullName>Registration Declined</fullName>
            </value>
            <value>
                <fullName>Registration In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>