force-app/main/default/objects/Account/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <description>When an opportunity is updated, a trigger is fired to update its parent account&#39;s opportunity status appropriately. This field exists so in the account view/report, users can quickly understand any new account&#39;s onboarding status.
If an opportunity of the account is open and in progress, this picklist will then display that opportunity&#39;s stage name instead of the values available.</description>
    <label>Opportunity Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Product Removed</fullName>
            </value>
            <value>
                <fullName>All Closed/Lost</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>