force-app/main/default/objects/Account/fields/Optal_Segment__c.field-meta.xml
<CustomField>
    <fullName>Optal_Segment__c</fullName>
    <description>Identifies the segment for Optal communication purposes during the DD process.</description>
    <inlineHelpText>Identifies the segment for Optal communication purposes during the DD process.</inlineHelpText>
    <label>Optal Segment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>