force-app/main/default/objects/Account/fields/Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Details__c</fullName>
    <description>Mandatory when Integrators Used is Other.</description>
    <inlineHelpText>Please provide details if selecting Other as integrator.</inlineHelpText>
    <label>Other Details</label>
    <type>TextArea</type>
</CustomField>