force-app/main/default/objects/Account/fields/Parent_ECN__c.field-meta.xml
<CustomField>
    <fullName>Parent_ECN__c</fullName>
    <formula>Parent.ECN__c</formula>
    <label>Reporting Parent ECN</label>
    <type>Text</type>
</CustomField>