force-app/main/default/objects/Account/fields/PointOfOrigin__c.field-meta.xml
<CustomField>
    <fullName>PointOfOrigin__c</fullName>
    <description>The point of origin of the rego request, internal (1) or external (0). This value is only ever used by the Salesforce Integrator console application.</description>
    <inlineHelpText>The point of origin of the rego request, internal (1) or external (0). This value is only ever used by the Salesforce Integrator console application.</inlineHelpText>
    <label>PointOfOrigin</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>