force-app/main/default/objects/Account/fields/Pooling_Account__c.field-meta.xml
<CustomField>
    <fullName>Pooling_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pooling Account</label>
    <type>Checkbox</type>
</CustomField>