force-app/main/default/objects/Account/fields/Primary_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email_Address__c</fullName>
    <label>Primary Contact Email Address</label>
    <type>Email</type>
</CustomField>