force-app/main/default/objects/Account/fields/Primary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Phone__c</fullName>
    <label>Primary Contact Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>