force-app/main/default/objects/Account/fields/product_contracts_active__c.field-meta.xml
<CustomField>
    <fullName>product_contracts_active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Contracts Active</label>
    <type>Checkbox</type>
</CustomField>