force-app/main/default/objects/Account/fields/products_Include_Vans__c.field-meta.xml
<CustomField>
    <fullName>products_Include_Vans__c</fullName>
    <formula>INCLUDES(eNett_products__c, &#39;VANs&#39;)</formula>
    <label>products Include Vans</label>
    <type>Checkbox</type>
</CustomField>