force-app/main/default/objects/Account/fields/Purpose_of_use__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_use__c</fullName>
    <inlineHelpText>Used to define the purpose of using VANs. This information is provided by the client during registration.</inlineHelpText>
    <label>Purpose of use</label>
    <type>TextArea</type>
</CustomField>