force-app/main/default/objects/Account/fields/Qualify_Opportunity_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualify_Opportunity_Completion_Date__c</fullName>
    <label>Qualify Opportunity Completion Date</label>
    <summarizedField>Opportunity.Opportunity_Qualify_Completed__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>