force-app/main/default/objects/Account/fields/RA_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>RA_Address_Line_2__c</fullName>
    <label>Bus Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>