force-app/main/default/objects/Account/fields/RA_City__c.field-meta.xml
<CustomField>
    <fullName>RA_City__c</fullName>
    <label>Bus City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>