force-app/main/default/objects/Account/fields/RA_Postcode__c.field-meta.xml
<CustomField>
    <fullName>RA_Postcode__c</fullName>
    <label>Bus Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>