force-app/main/default/objects/Account/fields/RA_State_Province__c.field-meta.xml
<CustomField>
    <fullName>RA_State_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus State Province</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RA_Country__c</field>
            <operation>equals</operation>
            <valueField>State_Detail__c.Country_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>State_Detail__c</referenceTo>
    <relationshipLabel>Accounts (State Province)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>