force-app/main/default/objects/Account/fields/RBA_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>RBA_Address_Line_1__c</fullName>
    <label>Reg Bus Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>