force-app/main/default/objects/Account/fields/RBA_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>RBA_Address_Line_2__c</fullName>
    <label>Reg Bus Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>