force-app/main/default/objects/Account/fields/RBA_City__c.field-meta.xml
<CustomField>
    <fullName>RBA_City__c</fullName>
    <label>Reg Bus City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>