force-app/main/default/objects/Account/fields/RBA_Postcode__c.field-meta.xml
<CustomField>
    <fullName>RBA_Postcode__c</fullName>
    <label>Reg Bus Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>