force-app/main/default/objects/Account/fields/RBA_State_Province__c.field-meta.xml
<CustomField>
    <fullName>RBA_State_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reg Bus State Province</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RBA_Country__c</field>
            <operation>equals</operation>
            <valueField>State_Detail__c.Country_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>State_Detail__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>