force-app/main/default/objects/Account/fields/Re_DD_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_DD_Due_Date__c</fullName>
    <formula>IF(INCLUDES(eNett_products__c,&quot;VANs&quot;),
(DATE(YEAR(DATEVALUE(DD_Completed_Date__c))+ CASE(Due_Diligence_Risk_Rating__c,&apos;Low&apos;,3,&apos;Medium&apos;,2,1), MONTH(DATEVALUE(DD_Completed_Date__c))+1, 1) -1),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is automatically populated based on the Due Diligence Completed date and the Risk Rating field. 
Low + 3 Years, Medium + 2 Years, High + 1 Year.By default, the date is the last day of the month.</inlineHelpText>
    <label>Re-DD Due Date</label>
    <type>Date</type>
</CustomField>