force-app/main/default/objects/Account/fields/Re_DD_Due_ECN__c.field-meta.xml
<CustomField>
    <fullName>Re_DD_Due_ECN__c</fullName>
    <formula>TODAY() &gt; X3_Months_to_Re_DD_Due__c</formula>
    <label>Re DD Due ECN</label>
    <type>Checkbox</type>
</CustomField>