force-app/main/default/objects/Account/fields/Re_DD_Reason__c.field-meta.xml
<CustomField>
    <fullName>Re_DD_Reason__c</fullName>
    <inlineHelpText>This field is mandatory if the re DD button is pressed on the account.</inlineHelpText>
    <label>Re DD Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>