force-app/main/default/objects/Account/fields/Re_DD_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_DD_Start_Date__c</fullName>
    <formula>DATE(YEAR(DATEVALUE(DD_Completed_Date__c))+ CASE(Due_Diligence_Risk_Rating__c,&apos;Low&apos;,3,&apos;Medium&apos;,2,1), MONTH(DATEVALUE(DD_Completed_Date__c))+1, 1) -91</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated based on Re-DD Due Date - 90 days</inlineHelpText>
    <label>Re-DD Start Date</label>
    <type>Date</type>
</CustomField>