force-app/main/default/objects/Account/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>equals</operation>
            <value>Referrer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referred Accounts</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>