force-app/main/default/objects/Account/fields/Referrer_Change_History__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Change_History__c</fullName>
    <label>Referrer Change History</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>