force-app/main/default/objects/Account/fields/Referrer_Change_Justification__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Change_Justification__c</fullName>
    <inlineHelpText>Mandatory field if the referrer has been changed.</inlineHelpText>
    <label>Referrer Change Justification</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>