force-app/main/default/objects/Account/fields/Referrer_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Client_ID__c</fullName>
    <label>Referrer Client ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>