force-app/main/default/objects/Account/fields/Referrer_Code__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Code__c</fullName>
    <label>Introducer / Referrer Code (ECN)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>