force-app/main/default/objects/Account/fields/Referrer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Contact_Name__c</fullName>
    <label>Referrer - Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>