force-app/main/default/objects/Account/fields/Referrer_Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Direct_Phone__c</fullName>
    <label>Referrer - Direct Phone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>