force-app/main/default/objects/Account/fields/Referrer_Email__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Email__c</fullName>
    <label>Referrer - Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>