force-app/main/default/objects/Account/fields/Referrer_Formula__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Formula__c</fullName>
    <formula>Referrer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Formula</label>
    <type>Text</type>
</CustomField>