force-app/main/default/objects/Account/fields/Referrer_Name_Old__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name_Old__c</fullName>
    <label>Referrer Name_Old</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>About Payments Consulting B.V</fullName>
            </value>
            <value>
                <fullName>CCRA International</fullName>
            </value>
            <value>
                <fullName>Club Travel SA (Pty) Ltd</fullName>
            </value>
            <value>
                <fullName>Computop GmbH</fullName>
            </value>
            <value>
                <fullName>Contac Services Inc</fullName>
            </value>
            <value>
                <fullName>Dolphin Dynamics Limited</fullName>
            </value>
            <value>
                <fullName>easyJet</fullName>
            </value>
            <value>
                <fullName>Gant Travel Management Ltd</fullName>
            </value>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Globa.li</fullName>
            </value>
            <value>
                <fullName>Globalcollect</fullName>
            </value>
            <value>
                <fullName>Globalstar</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Mr Orange</fullName>
            </value>
            <value>
                <fullName>Multicom Products</fullName>
            </value>
            <value>
                <fullName>Navitas Solutions Limited</fullName>
            </value>
            <value>
                <fullName>Pyton Communication Services B.V.</fullName>
            </value>
            <value>
                <fullName>Rezopia Inc.</fullName>
            </value>
            <value>
                <fullName>Travelport SMO</fullName>
            </value>
            <value>
                <fullName>Vibe Software Limited</fullName>
            </value>
            <value>
                <fullName>Voxel Media Srl Bavel</fullName>
            </value>
            <value>
                <fullName>Welcome Travel Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>