force-app/main/default/objects/Account/fields/Referrer_URL__c.field-meta.xml
<CustomField>
    <fullName>Referrer_URL__c</fullName>
    <formula>IF(ISPICKVAL(Account_Type__c, &#39;Referrer&#39;) &amp;&amp; NOT(ISBLANK(ECN__c)), $Setup.RegoSettings__c.sfdcHostName__c + &#39;?referrer=&#39; + ECN__c, null)</formula>
    <label>Referrer URL</label>
    <type>Text</type>
</CustomField>