force-app/main/default/objects/Account/fields/Registration_Completed__c.field-meta.xml
<CustomField>
    <fullName>Registration_Completed__c</fullName>
    <inlineHelpText>Automatically populated based on the date the registration was completed. For external registrations this is when the client accepts the T&amp;Cs and submits the registration. 
For Internal registrations, registration is completed by the AML team.</inlineHelpText>
    <label>Registration Completed</label>
    <type>DateTime</type>
</CustomField>