force-app/main/default/objects/Account/fields/Registration_DD_Owner__c.field-meta.xml
<CustomField>
    <fullName>Registration_DD_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the Registration/DD</description>
    <inlineHelpText>Owner of the Registration/DD</inlineHelpText>
    <label>Registration/DD Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>