force-app/main/default/objects/Account/fields/Registration_Started__c.field-meta.xml
<CustomField>
    <fullName>Registration_Started__c</fullName>
    <inlineHelpText>Automatically populated based on the date the registration commenced.</inlineHelpText>
    <label>Registration Started</label>
    <type>DateTime</type>
</CustomField>