force-app/main/default/objects/Account/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <inlineHelpText>Automatically updated based on the progress of the Registration.</inlineHelpText>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Awaiting Acceptance</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>New (Product)</fullName>
            </value>
            <value>
                <fullName>Rejected - Non-responsive</fullName>
            </value>
            <value>
                <fullName>Rejected - Spam/test application</fullName>
            </value>
            <value>
                <fullName>Rejected - Application N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>