force-app/main/default/objects/Account/fields/RegoButtonClicked__c.field-meta.xml
<CustomField>
    <fullName>RegoButtonClicked__c</fullName>
    <description>Date/time that one of the rego create buttons was clicked.</description>
    <label>RegoButtonClicked</label>
    <type>DateTime</type>
</CustomField>