force-app/main/default/objects/Account/fields/Remove_eNett_EFT__c.field-meta.xml
<CustomField>
    <fullName>Remove_eNett_EFT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove eNett EFT</label>
    <type>Checkbox</type>
</CustomField>