force-app/main/default/objects/Account/fields/Remove_VANs__c.field-meta.xml
<CustomField>
    <fullName>Remove_VANs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove VANs</label>
    <type>Checkbox</type>
</CustomField>