force-app/main/default/objects/Account/fields/Reporting_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Parent_Name__c</fullName>
    <formula>Parent.Name</formula>
    <label>Reporting Parent Account</label>
    <type>Text</type>
</CustomField>