force-app/main/default/objects/Account/fields/Revenue_Acceleration_Group__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Acceleration_Group__c</fullName>
    <label>Revenue Acceleration Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bavel</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>New Customer Not Transacting</fullName>
            </value>
            <value>
                <fullName>Customer Under Performing</fullName>
            </value>
            <value>
                <fullName>BAU</fullName>
            </value>
            <value>
                <fullName>Fill the Gap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>